--- a/.github/workflows/changelog-entry.yml
+++ b/.github/workflows/changelog-entry.yml
@@ -1,9 +1,10 @@
 name: Check Changelog for changes
 on:
-  pull_request:
-    types: [assigned, opened, synchronize, reopened, labeled, unlabeled]
-    branches:
-      - main
+  workflow_dispatch:
+#  pull_request:
+#    types: [assigned, opened, synchronize, reopened, labeled, unlabeled]
+#    branches:
+#      - main
 jobs:
   Check-Changelog:
     name: Check Changelog Action
