--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -142,7 +142,7 @@ jobs:
       - name: create dir
         run: mkdir -p tests/report/profile-data
       - name: create dirs
-        run: mkdir -p tests/report/profile-data/dist/node/bindings/crypto/  tests/report/profile-data/dist/node/lib/mina/actions tests/report/profile-data/dist/node/lib tests/report/profile-data/dist/node/lib/util/ tests/report/profile-data/dist/node/lib/ml/ tests/report/profile-data/dist/node/lib/mina/ tests/report/profile-data/dist/node/lib/mina/actions/ tests/report/profile-data/dist/node/lib/mina/actions/offchain-contract-tests/ tests/report/profile-data/dist/node/lib/mina/test/ tests/report/profile-data/dist/node/lib/mina/token/ tests/report/profile-data/dist/node/lib/proof-system/ tests/report/profile-data/dist/node/lib/provable/test/ tests/report/profile-data/dist/node/lib/testing/ tests/report/profile-data/dist/node/mina-signer/tests/ tests/report/profile-data/dist/node/mina/buildkite/scripts/ tests/report/profile-data/dist/node/bindings/lib/ tests/report/profile-data/dist/node/bindings/crypto/ tests/report/profile-data/dist/node/bindings/crypto/bindings/        
+        run: mkdir -p tests/report/profile-data/dist/node/bindings/crypto/  tests/report/profile-data/dist/node/lib/mina/actions tests/report/profile-data/dist/node/lib tests/report/profile-data/dist/node/lib/util/ tests/report/profile-data/dist/node/lib/ml/ tests/report/profile-data/dist/node/lib/mina/ tests/report/profile-data/dist/node/lib/mina/actions/ tests/report/profile-data/dist/node/lib/mina/actions/offchain-contract-tests/ tests/report/profile-data/dist/node/lib/mina/test/ tests/report/profile-data/dist/node/lib/mina/token/ tests/report/profile-data/dist/node/lib/proof-system/ tests/report/profile-data/dist/node/lib/provable/test/ tests/report/profile-data/dist/node/lib/testing/ tests/report/profile-data/dist/node/mina-signer/tests/ tests/report/profile-data/dist/node/mina/buildkite/scripts/ tests/report/profile-data/dist/node/bindings/lib/ tests/report/profile-data/dist/node/bindings/crypto/ tests/report/profile-data/dist/node/bindings/crypto/bindings tests/report/profile-data/./dist/node/mina-signer/src/
       - name: Run unit tests
         env:
           TOTAL_TESTS: ${{ needs.Prepare.outputs.test_count }}
@@ -239,7 +239,7 @@ jobs:
       - name: Execute E2E tests
         run: node --cpu-prof --cpu-prof-name "e2e-tests" --cpu-prof-dir tests/report/profile-data $(which npm) run test:e2e
       - name: move files
-        run: mv isolate-*-v8.log Heap.*.heapprofile CPU.*.cpuprofile tests/report/profile-data
+        run: mv isolate-*-v8.log Heap.*.heapprofile CPU.*.cpuprofile tests/report/profile-data || echo skip errors
 
       - name: archive results
         run: tar -czf profile-data.tgz tests/report/profile-data
