--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -141,8 +141,8 @@ jobs:
         run: touch profiling.md
       - name: create dir
         run: mkdir -p tests/report/profile-data
-      - name: create dirs
-        run: mkdir -p tests/report/profile-data/dist/node/bindings/crypto/  tests/report/profile-data/dist/node/lib/mina/actions tests/report/profile-data/dist/node/lib tests/report/profile-data/dist/node/lib/util/ tests/report/profile-data/dist/node/lib/ml/ tests/report/profile-data/dist/node/lib/mina/ tests/report/profile-data/dist/node/lib/mina/actions/ tests/report/profile-data/dist/node/lib/mina/actions/offchain-contract-tests/ tests/report/profile-data/dist/node/lib/mina/test/ tests/report/profile-data/dist/node/lib/mina/token/ tests/report/profile-data/dist/node/lib/proof-system/ tests/report/profile-data/dist/node/lib/provable/test/ tests/report/profile-data/dist/node/lib/testing/ tests/report/profile-data/dist/node/mina-signer/tests/ tests/report/profile-data/dist/node/mina/buildkite/scripts/ tests/report/profile-data/dist/node/bindings/lib/ tests/report/profile-data/dist/node/bindings/crypto/ tests/report/profile-data/dist/node/bindings/crypto/bindings tests/report/profile-data/./dist/node/mina-signer/src/
+        #- name: create dirs
+
       - name: Run unit tests
         env:
           TOTAL_TESTS: ${{ needs.Prepare.outputs.test_count }}
@@ -172,6 +172,7 @@ jobs:
               echo "Running test: ${test_files[$i]}"
               export OUTPATH="tests/report/profile-data-${i}"
               mkdir -p ${OUTPATH}
+              mkdir -p ${OUTPATH}/dist/node/bindings/crypto/  ${OUTPATH}/dist/node/lib/mina/actions ${OUTPATH}/dist/node/lib ${OUTPATH}/dist/node/lib/util/ ${OUTPATH}/dist/node/lib/ml/ ${OUTPATH}/dist/node/lib/mina/ ${OUTPATH}/dist/node/lib/mina/actions/ ${OUTPATH}/dist/node/lib/mina/actions/offchain-contract-tests/ ${OUTPATH}/dist/node/lib/mina/test/ ${OUTPATH}/dist/node/lib/mina/token/ ${OUTPATH}/dist/node/lib/proof-system/ ${OUTPATH}/dist/node/lib/provable/test/ ${OUTPATH}/dist/node/lib/testing/ ${OUTPATH}/dist/node/mina-signer/tests/ ${OUTPATH}/dist/node/mina/buildkite/scripts/ ${OUTPATH}/dist/node/bindings/lib/ ${OUTPATH}/dist/node/bindings/crypto/ ${OUTPATH}/dist/node/bindings/crypto/bindings ${OUTPATH}/./dist/node/mina-signer/src/
               (node --cpu-prof --cpu-prof-name "${test_files[$i]}-test" --cpu-prof-dir ${OUTPATH} --enable-source-maps "${test_files[$i]}" | tee -a profiling.md) || echo skip errors
               #
           done
@@ -197,7 +198,7 @@ jobs:
     steps:
       - run: echo "All unit tests completed successfully"
       - name: archive results
-        run: tar -czf profile-data.tgz tests/report/profile-data
+        run: tar -czf profile-data.tgz tests/report/
       - name: Upload E2E test artifacts
         uses: actions/upload-artifact@v4
         continue-on-error: true
