--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -143,7 +143,7 @@ jobs:
       - name: Prepare for tests
         run: touch profiling.md
       - name: create dir
-        run: mkdir -p tests/profile/profile-data
+        run: mkdir -p profile/profile-data
         #- name: create dirs
 
       - name: Run unit tests
@@ -155,7 +155,7 @@ jobs:
           echo "Total tests: $TOTAL_TESTS"
           echo "Current chunk: $CHUNK"
           echo "Total chunks: $CHUNKS"
-          export OUTPATH="tests/profile/profile-data-${CHUNK}-${{ matrix.perf }}"
+          export OUTPATH="profile/profile-data-${CHUNK}-${{ matrix.perf }}-${{ matrix.node_version }}"
           mkdir -p "${OUTPATH}"
               
           if [ -z "$TOTAL_TESTS" ] || [ "$TOTAL_TESTS" -eq 0 ]; then
@@ -220,8 +220,8 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: test-results-${{ matrix.chunk }}-${{ matrix.perf }}
-          path: tests/profile/profile-data-${{ matrix.chunk }}-${{ matrix.perf }}
+          name: test-results-${{ matrix.chunk }}-${{ matrix.perf }}-${{ matrix.node_version }}
+          path: profile/profile-data-${{ matrix.chunk }}-${{ matrix.perf }}-${{ matrix.node_version }}
 
       - name: Add to job summary
         if: always()
