--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -112,7 +112,7 @@ jobs:
   Run-Unit-Tests:
     needs: Prepare
     name: Run unit tests parallel
-    timeout-minutes: 210
+    timeout-minutes: 60 # lets keep the individual jobs shorter
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -174,6 +174,7 @@ jobs:
         run: mkdir -p ${{env.OUTPUT_TEST_DIR}}
 
       - name: Run unit tests
+        timeout-minutes: 30
         env:
           TOTAL_TESTS: ${{ needs.Prepare.outputs.test_count }}
           CHUNK: ${{ matrix.chunk }}
