--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -117,12 +117,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        #chunk: [
-        #1,2,3,4,5,6,7,8,9,10,11,12,
-        #13
-        #,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32
-        #chunk: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32]
-        chunk: ${{ fromJSON('[' + range(1, 33).join(',') + ']') }}
+        #chunk: [ 13 ]
+        chunk: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32]        
+        # TODO use https://www.raygesualdo.com/posts/dynamic-matrices-github-actions/
         perf: [
         no,
         #prof, heap, cpu,
